syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Comments.Responses";

package sisa.blog.api.v1.comments.responses;

import "google/protobuf/wrappers.proto";

import "sisa/libs/common/responses/paging_info_response.proto";
import "sisa/libs/common/responses/actor_info_response.proto";

message CommentResponse {
  // reversed field must be reflect to the database
  reserved 6 to 50; // other data fields
  reserved 53 to 60; // relationship fields
  reserved 63 to 70; // audit fields

  // data fields: from 1 to 50
  string id = 1;
  string content = 2;
  int32 level = 3;
  int32 reactionCount = 4;
  map<string, int32> reactionCounts = 5;

  // relationship fields: from 51 to 60
  google.protobuf.StringValue parentId = 51;
  string postId = 52;

  // audit fields: from 63 to 70
  sisa.common.responses.ActorInfoResponse creator = 61;
  sisa.common.responses.ActorInfoResponse updater = 62;
}

message SingleCommentResponse {
  CommentResponse value = 1;
}

message ListCommentsResponse {
  repeated CommentResponse value = 1;
  sisa.common.responses.PagingInfoResponse paging = 2;
}
